Fix scrunched logo on mobile dashboard nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -477,4 +477,8 @@ img {
   .nav-inner {
     height: 60px;
   }
+
+  .nav-logo img {
+    height: 50px;
+  }
 }
